--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -5,6 +5,7 @@
 
 body {
   @apply m-0;
+  background-color: #1C1C1E;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
