--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -63,18 +63,18 @@ code {
   --card-foreground: oklch(0.145 0 0);
   --popover: oklch(1 0 0);
   --popover-foreground: oklch(0.145 0 0);
-  --primary: #ECECEC;
-  --primary-foreground: #090909;
+  --primary: #D9D9D9;
+  --primary-foreground: #0099FF;
   --secondary: oklch(0.97 0 0);
   --secondary-foreground: oklch(0.205 0 0);
-  --muted: #656565;
-  --muted-foreground: oklch(0.556 0 0);
+  --muted: #555555;
+  --muted-foreground: #A1A1A1;
   --accent: #3f3f3f;
   --accent-foreground: #FAFAFA;
   --destructive: oklch(0.577 0.245 27.325);
   --border: oklch(0.922 0 0);
   --input: oklch(0.922 0 0);
-  --ring: oklch(0.708 0 0);
+  --ring: #CCCCCC;
   --chart-1: oklch(0.646 0.222 41.116);
   --chart-2: oklch(0.6 0.118 184.704);
   --chart-3: oklch(0.398 0.07 227.392);
